Fix some android studio warnings in LocalAuthorityControllerTests.